--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,12 +19,12 @@
    </div> -->
 
     <!-- using react -->
-    <div id="root"> </div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-     <script
-            src= "./APP.js">
-        </script>
-   
+    <div id="root"> 
+    <h1>Not Rendered</h1>
+    </div>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+    <script type="module" src= "./APP.js"> </script>
+        <!-- <p>Hellloooooooooooooooooooo</p> -->  
 </body>
 </html>
